fix layout bug

--- a/dev/toast/toast.css
+++ b/dev/toast/toast.css
@@ -3,6 +3,9 @@ toast-manager {
 	z-index: 100;
 	bottom: 0px;
 	left: 0px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
 }
 
 toast-card {
